[package]
name = "try-rust-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# WebGLへビルドする際はdynamic_linkingを外す
[dependencies]
#bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy = { version = "0.11.2" }
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
